# fastapiserver

./: .clineignore  .gitignore  1.md  2.md  GStreamer + Roboflow + Android_ WebSocket 数据传输 - 开发任务清单.md  RTSP_Server_FastAPI_Project_Solution.md  WebSocket数据传输实现.md  Windows11开发环境设置.md  ai_task.md  ai模块设计方案.md  rtsp流ai处理逻辑.md  start_server.sh  数据流ai分析处理方案.md
.clinerules/: 00-environment.md  01-coding.md  02-architecture.md  03-gstreamer.md  04-interaction.md
.github/copilot/: API_DOCUMENTATION.md  ARCHITECTURE.md  CODING_STANDARDS.md  PROJECT_OVERVIEW.md  WORKFLOW_GUIDELINES.md
.vscode-server/data/User/globalStorage/rooveterinaryinc.roo-cline/settings/: mcp_settings.json
docs/: 1_总体设计和架构.md  2_软件测试.md  3_发布和运行.md
src/: .dockerignore  Dockerfile  app_next_level.py  build.sh  docker-compose.yml  env.template  fix-docker-network.sh  pyproject.toml  rtspserver.py  site-packages  test_gst.py  test_rtsp_server.py  test_websocket_client.py
src/app/: main.py
src/app/api/: models.py  routes.py
src/app/core/: config.py  logger.py
src/app/rtsp/: server.py  server.py.bak3
src/app/services/: __init__.py  ai_processor.py  gstreamer_frame_producer.py  gstreamer_video_source.py  monitor.py  processors.py  storage.py  video_service.py  websocket_manager.py
src/app/utils/: __init__.py  fps_counter.py  gstreamer_utils.py
src/tests/: test_ai_processor.py  test_gstreamer_frame_producer.py  test_integration.py  test_logger.py  test_main.py  test_rtsp_server.py  test_rtspserver.py  test_video_service.py  test_websocket_manager.py
